cfn-template2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: 
  CloudFormation Template for Roman Numerals Converter Application. 

  This template creates a Python Flask Web Application on an Amazon Linux 2023  

  EC2 Instance with a custom security group allowing HTTP connections on port 80, 8080, and SSH connection on port 22.

Parameters:

  InstanceType:
    Description: Select your instance type.
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t2.nano
  KeyName:
    Description: EC2 keypair to allow SSH access
    Type: AWS::EC2::KeyPair::KeyName
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-minimal-kernel-default-x86_64

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: chris-roman-numeral-app-secgroup-80-22-8080
      SecurityGroupIngress:
        - FromPort: 80
          IpProtocol: tcp
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - FromPort: 22
          IpProtocol: tcp
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Chris-romanNumeral-SecGroup

  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      UserData: 
        Fn::Base64: 
            !Sub |
              #!/bin/bash
              dnf update -y
              yum install wget -y
              dnf install python3 -y
              dnf install python3-pip -y
              pip3 install flask
              dnf install git -y
              cd /home/ec2-user
              FOLDER="https://raw.githubusercontent.com/aredo01/Project-001-roman-numerals-converter/main/"
              mkdir -p templates
              wget -P templates ${FOLDER}templates/index.html
              wget -P templates ${FOLDER}templates/result.html
              wget ${FOLDER}app.py
              python3 app.py
      Tags:
          - Key: Name
            Value: chris-RomanNumeral-ec2

Outputs:
  WebSiteURL:
    Description: The public IP address of the Roman Numerals Converter app
    Value: 
      !Sub "http://${WebServerHost.PublicIp}:80"
